--- a/src/main/webapp/staticfiles/css/searchresult.css
+++ b/src/main/webapp/staticfiles/css/searchresult.css
@@ -1,3 +1,7 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 .header-layout {
 	padding-top: 1em;
 }
